compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unreachable_function_call_if_panic_is_last_argument_2.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        pub fn wibble(_, _) { 1 }\n        pub fn main() {\n          wibble(1, panic)\n        }"
---
warning: Unreachable code
  ┌─ /src/warning/wrn.rakun:4:11
  │
4 │           wibble(1, panic)
  │           ^^^^^^

This function call is unreachable because its last argument always panics.
Your code will crash before reaching this point.
