compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unreachable_use_after_panic.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        pub fn wibble(_) { 1 }\n        pub fn main() {\n            panic\n            use <- wibble\n            1\n        }\n        "
---
warning: Unreachable code
  ┌─ /src/warning/wrn.rakun:5:20
  │
5 │             use <- wibble
  │                    ^^^^^^

This code is unreachable because it comes after a `panic`.
