compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unreachable_warning_2.snap
---
source: compiler-core/src/type_/tests/warnings.rs
assertion_line: 1645
expression: "pub fn main() {\n          let _ = panic\n          1\n        }"
---
----- SOURCE CODE
pub fn main() {
          let _ = panic
          1
        }

----- WARNING
warning: Unreachable code
  ┌─ /src/warning/wrn.rakun:3:11
  │
3 │           1
  │           ^

This code is unreachable because it comes after a `panic`.
