compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unused_function_literal_raises_a_warning.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n  fn(n) { n + 1 }\n  1\n}\n"
---
----- SOURCE CODE

pub fn main() {
  fn(n) { n + 1 }
  1
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.rakun:3:3
  │
3 │   fn(n) { n + 1 }
  │   ^^^^^^^^^^^^^^^ This value is never used
