compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unused_imported_module_with_alias_warnings_test.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: import rakun/wibble as wobble
---
----- SOURCE CODE
import rakun/wibble as wobble

----- WARNING
warning: Unused imported module
  ┌─ /src/warning/wrn.rakun:1:1
  │
1 │ import rakun/wibble as wobble
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This imported module is never used

Hint: You can safely remove it.
