compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unused_int.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() { 1 2 }"
---
warning: Unused literal
  ┌─ /src/warning/wrn.rakun:1:17
  │
1 │ pub fn main() { 1 2 }
  │                 ^ This value is never used

Hint: You can safely remove it.
